# doris

./: build.sh
be/: CMakeLists.txt
be/src/exec/: arrow_reader.cpp  arrow_reader.h  broker_scan_node.cpp  parquet_reader.cpp  parquet_reader.h  parquet_scanner.cpp
be/src/http/action/: stream_load.cpp
be/src/olap/rowset/segment_v2/: column_reader.cpp  column_reader.h
be/src/vec/exec/: varrow_scanner.cpp  varrow_scanner.h  vorc_reader.cpp  vorc_reader.h  vorc_scanner.cpp  vorc_scanner.h  vparquet_scanner.cpp  vparquet_scanner.h
be/test/vec/exec/: vorc_scanner_test.cpp  vparquet_scanner_test.cpp
fe/fe-core/src/main/cup/: sql_parser.cup
fe/fe-core/src/main/java/org/apache/doris/catalog/: Env.java
parquet/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
